--- a/main.css
+++ b/main.css
@@ -124,6 +124,16 @@ body {
 .key-feature {
     display: inline-block;
     width: 30%;
+    vertical-align: top;
+}
+
+.key-feature__image {
+    background: rgb(240, 143, 143);
+    width: 128px;
+    height: 128px;
+    border: 2px solid gray;
+    border-radius: 50%;
+    margin: auto;
 }
 
 .key-feature__description {
@@ -206,4 +216,31 @@ body {
     color: hotpink;
     background: white;
     border: none;
+}
+
+.main-footer {
+    background: black;
+    padding: 36px;
+    margin-top: 48px;
+}
+
+.main-footer__links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.main-footer__link {
+    display: inline-block;
+    margin: 0 16px;
+}
+
+.main-footer__link a {
+    color: white;
+}
+
+.main-footer__link a:hover,
+.main-footer__link a:active {
+    color: lightgray;
 }
