--- a/main.css
+++ b/main.css
@@ -1,17 +1,10 @@
-* {
-    box-sizing: border-box;
-}
-body {
-    font-family: "Courier New", Courier, monospace;
-    margin: 0;
-}
-
 #product-overview {
     background: url("freedom.jpg");
     background-color: red;
     width: 100%;
     height: 520px;
     padding: 10px;
+    margin-top: 30px;
 }
 
 .section-title {
@@ -24,6 +17,11 @@ body {
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
+.plan__list {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
 .plan {
     background: lightgreen;
     text-align: center;
@@ -68,11 +66,6 @@ body {
     padding: 0;
 }
 
-/* this is also viable for editing the list items in the Ul  */
-
-.plan__features li {
-}
-
 .plan__feature {
     margin: 8px 0;
 }
@@ -81,22 +74,6 @@ body {
     background: green;
     color: white;
     box-shadow: 8px 10px 6px 6px gray;
-}
-
-.button {
-    background: rgb(3, 53, 3);
-    color: white;
-    font: inherit;
-    border-radius: 5px;
-    border: 2px solid none;
-    padding: 8px;
-    font-weight: bold;
-    cursor: pointer;
-}
-.button:hover,
-.button:active {
-    color: rgb(3, 53, 3);
-    background: white;
 }
 
 .button:focus {
@@ -141,106 +118,4 @@ body {
     font-weight: bold;
     color: white;
     font-size: 20px;
-}
-
-.main-header {
-    background-color: green;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 100%;
-    padding: 5px 10px;
-    display: inline-block;
-}
-
-.main-header > div {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.main-header__brand {
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 22px;
-    vertical-align: middle;
-}
-
-.main-header__brand a {
-    color: black;
-}
-
-.main-header__brand a:hover {
-    color: white;
-}
-
-.main-nav {
-    display: inline-block;
-    width: calc(100% - 80px);
-    text-align: right;
-    vertical-align: middle;
-}
-
-.main-nav__items {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.main-nav__item {
-    display: inline-block;
-    margin: 0 15px;
-}
-
-.main-nav a {
-    color: purple;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.main-nav__item a:hover,
-.main-nav__item a:active {
-    color: white;
-    border-bottom: 2px solid;
-}
-
-.main-nav__item--cta a {
-    color: white;
-    background: hotpink;
-    padding: 6px 16px;
-    border-radius: 10px;
-}
-
-.main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
-    color: hotpink;
-    background: white;
-    border: none;
-}
-
-.main-footer {
-    background: black;
-    padding: 36px;
-    margin-top: 48px;
-}
-
-.main-footer__links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
-.main-footer__link {
-    display: inline-block;
-    margin: 0 16px;
-}
-
-.main-footer__link a {
-    color: white;
-}
-
-.main-footer__link a:hover,
-.main-footer__link a:active {
-    color: lightgray;
 }
