--- a/main.css
+++ b/main.css
@@ -1,15 +1,46 @@
 #product-overview {
-    background: url("freedom.jpg");
-    background-color: red;
-    width: 100%;
-    height: 520px;
-    padding: 10px;
-    margin-top: 30px;
+    background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+        url("images/freedom.jpg") left 10% bottom 75% / cover no-repeat
+            border-box,
+        forestgreen;
+    /* background-image: url("freedom.jpg");
+    background-size: cover;
+    background-position: left 10% bottom 20%; */
+    /* background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box; */
+    /* background-attachment: ;  sets scroll behavior */
+    /* background-image: linear-gradient(
+        180deg,
+        green 5%,
+        blue,
+        yellow,
+        purple,
+        transparent
+    );
+
+    background-image: radial-gradient(
+        green 5%,
+        blue,
+        yellow,
+        purple,
+        transparent
+    ); */
+    width: 100vw;
+    height: 33vh;
+    padding: 0.8rem;
+    margin-top: 2.5rem;
+    position: relative;
+    /* border: 5px dashed red; */
 }
 
 .section-title {
     color: green;
     text-align: center;
+}
+#main-title {
+    position: relative;
+    top: 12.5rem;
 }
 
 #product-overview h1 {
@@ -36,7 +67,7 @@
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.514);
     color: green;
     background: white;
-    padding: 5px 5px;
+    padding: 0.5rem 0.5rem;
     border-radius: 5px;
     width: auto;
 }
@@ -111,6 +142,7 @@
     border: 2px solid gray;
     border-radius: 50%;
     margin: auto;
+    padding: 20px;
 }
 
 .key-feature__description {
