--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,9 +1,10 @@
 main {
-    padding-top: 40px;
+    padding-top: 2.5rem;
 }
 
 .background {
-    background: url("../images/plans-background.jpg");
+    background: url("../images/plans-background.jpg") center/cover;
+    filter: grayscale(40%);
     width: 100%;
     height: 100%;
     position: fixed;
@@ -12,7 +13,7 @@ main {
 
 .packages {
     width: 80%;
-    margin: 16px 5px;
+    margin: 1rem 0.3rem;
     border: 2px solid black;
     position: relative;
 }
@@ -27,7 +28,7 @@ main {
     text-decoration: none;
     color: inherit;
     display: block;
-    padding: 32px;
+    padding: 2rem;
 }
 
 /* absolute elements bind to the nearest ancestor with a position property */
@@ -37,9 +38,10 @@ main {
     left: 0;
     margin: auto;
     font-weight: bold;
+    font-size: 0.8rem;
     color: white;
     background: darkred;
-    padding: 10px;
+    padding: 0.625rem;
 }
 
 .package-promo {
@@ -47,11 +49,11 @@ main {
 }
 
 .package-description {
-    padding: 16px;
+    padding: 1rem;
     border: 2px solid black;
     color: black;
     background: white;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 .clear-fix {
